keycloak bugs fixed, implemented admin login and employee registration at creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+spring.security.oauth2.client.registration.ram-badges-app.client-id=ram-badges-app
+spring.security.oauth2.client.registration.ram-badges-app.client-secret=QJ4ejAdMTNhv7wEmAE6R2PmgpF2weEsn
+spring.security.oauth2.client.registration.ram-badges-app.redirect-uri=http://localhost:8080/login/oauth2/code/ram-badges-app
+spring.security.oauth2.client.registration.ram-badges-app.scope=openid,profile,roles,email
+spring.security.oauth2.client.registration.ram-badges-app.authorization-grant-type=authorization_code
+spring.security.oauth2.client.provider.ram-badges-app.issuer-uri=http://localhost:8081/realms/ram
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8081/realms/ram
-
